<resources>
    <string name="app_name">Goni Bablo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="ok">OK</string>
    <string name="no">Nope</string>
    <string name="item">Item</string>
    <string name="people">People</string>
    <string name="count">Count</string>
    <string name="wrong_sum">Wrong sum entered, sum should same as item price</string>
</resources>
